[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/pixelFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/pixelFont.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/FuelBar/FuelBarBackground.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/FuelBar/FuelBarOutline.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/FuelBar/FuelBarProgress.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/FuelBar/FuelCan.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 249.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 1 )
text = "100"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -283.0
margin_right = -27.0
margin_bottom = -63.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Hint:
Use the back part of your ship while drifting to destroy enemies"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBarParent" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBar" type="TextureProgress" parent="FuelBarParent"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 31.1127
margin_top = -220.672
margin_right = 131.113
margin_bottom = 803.328
rect_scale = Vector2( 0.7, 0.7 )
step = 0.1
value = 100.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuelicon" type="TextureRect" parent="FuelBarParent"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.1893
margin_top = -318.703
margin_right = 277.189
margin_bottom = -62.7034
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathScreen" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 5.0
margin_top = -414.0
margin_right = 5.0
margin_bottom = 582.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="DeathScreen"]
anchor_left = 0.4965
anchor_top = 0.5
anchor_right = 0.4965
anchor_bottom = 0.5
margin_left = -133.5
margin_top = -35.5
margin_right = 133.5
margin_bottom = 35.5
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DeathScreen/RestartButton" to="." method="_on_RestartButton_pressed"]
